--- a/basic_calculation/basic_calculation/MainPage.xaml
+++ b/basic_calculation/basic_calculation/MainPage.xaml
@@ -36,12 +36,12 @@
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="*"/>
+            
         </Grid.ColumnDefinitions>
 
 
         
-        <StackLayout Grid.Row="0" Grid.ColumnSpan="6" Padding="20,0">
+        <StackLayout Grid.Row="0" Grid.ColumnSpan="5" Padding="20,0">
 
             <Entry x:Name="displayText"
                     FontSize="Large"
@@ -83,8 +83,8 @@
                TextColor="Black"
                HorizontalTextAlignment="End" 
                VerticalTextAlignment="Center"
-               LineBreakMode="NoWrap" 
-               Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="5" Padding="20,0"/>
+               LineBreakMode="CharacterWrap" 
+               Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="4" Padding="20,0"/>
 
         <Label Text="A"
                BackgroundColor="White"
@@ -135,54 +135,43 @@
                 BackgroundColor="#B1B1B1" TextColor="White"
                 FontSize="36" BorderRadius="20" Clicked="OnSelect"/>
 
-        <Button Text="÷" Grid.Row="2" Grid.Column="4"
+        <Button Text="÷" Grid.Row="3" Grid.Column="4"
                 BackgroundColor="Gray" TextColor="White"
                 FontSize="36" BorderRadius="20" Clicked="OnSelect"/>
-        <Button Text="×" Grid.Row="2" Grid.Column="3"
+        <Button Text="×" Grid.Row="3" Grid.Column="3"
                 BackgroundColor="Gray" TextColor="White"
                 FontSize="36" BorderRadius="20" Clicked="OnSelect"/>
-        <Button Text="-" Grid.Row="3" Grid.Column="3"
+        <Button Text="-" Grid.Row="4" Grid.Column="3"
                 BackgroundColor="Gray" TextColor="White"
                 FontSize="36" BorderRadius="20" Clicked="OnSelect"/>
-        <Button Text="+" Grid.Row="3" Grid.Column="4"
+        <Button Text="+" Grid.Row="4" Grid.Column="4"
                 BackgroundColor="Gray" TextColor="White"
                 FontSize="36" BorderRadius="20" Clicked="OnSelect"/>
-        <Button Text="/" Grid.Row="4" Grid.Column="3"
-                BackgroundColor="Gray" TextColor="White"
-                FontSize="36" BorderRadius="20" Clicked="OnSelect"/>
+        
 
-        <Button Text="%" Grid.Row="4" Grid.Column="4"
+        <Button Text="%" Grid.Row="5" Grid.Column="4"
                 BackgroundColor="Gray" TextColor="White"
                 FontSize="36" BorderRadius="20" Clicked="OnSelect"/>
 
 
-        <Button Text="(" Grid.Row="5" Grid.Column="3"
+        <Button Text="(" Grid.Row="6" Grid.Column="3"
                 BackgroundColor="Gray" TextColor="White"
                 FontSize="36" BorderRadius="20" Clicked="OnSelect"/>
 
-        <Button Text=")" Grid.Row="5" Grid.Column="4"
+        <Button Text=")" Grid.Row="6" Grid.Column="4"
                 BackgroundColor="Gray" TextColor="White"
                 FontSize="36" BorderRadius="20" Clicked="OnSelect"/>
 
-        <Button Text="←" Grid.Row="6" Grid.Column="3"
-                BackgroundColor="Gray" TextColor="White"
-                FontSize="36" BorderRadius="20" Clicked="OnSelectL"/>
+ 
 
-        <Button Text="→" Grid.Row="6" Grid.Column="4"
-                BackgroundColor="Gray" TextColor="White"
-                FontSize="36" BorderRadius="20" Clicked="OnSelectR"/>
-
-
-        <Button Text="C" Grid.Row="2" Grid.Column="5" 
+        <Button Text="C" Grid.Row="2" Grid.Column="4" 
                 BackgroundColor="#02FFFA" TextColor="Black"
                 FontSize="36" BorderRadius="20" Clicked="OnClear"/>
-        <Button Text="DEL" Grid.Row="3" Grid.Column="5"
+        <Button Text="DEL" Grid.Row="2" Grid.Column="3"
                 BackgroundColor="#02FFFA" TextColor="Black"
                 FontSize="Medium" BorderRadius="20" Clicked="OnDel"/>
-        <Button Text="決定" Grid.Row="4" Grid.Column="5" 
-                BackgroundColor="Gray" TextColor="White"
-                FontSize="Small" BorderRadius="20" Clicked="Ondecide"/>
-        <Button Text="分数" Grid.Row="5" Grid.Column="5" 
+        
+        <Button Text="分数" Grid.Row="5" Grid.Column="3" 
                 BackgroundColor="Gray" TextColor="White"
                 FontSize="Small" BorderRadius="20" Clicked="OnF"/>
 
